Main logic and scss all completed, final copy of project done

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,55 @@
 </head>
 <body>
 
-  
+  <!-- Header Section  -->
+  <header>
+
+    <div class="header-content">
+      <h2>Card Match</h2>
+      <p>Use the two attempts you have to try to <br>
+      find the two matching pairs of cards.</p>
+    </div>
+
+    <h1 id="attempt-counter"></h1>
+  </header>
+
+
+  <!-- Card Section -->
+  <section id="game-section">
+    
+    <!-- <div class="card">
+      <img src="styles/card-flip-card-image.png" alt="">
+    </div>
+
+    <div class="card">
+      <img src="styles/card-flip-card-image.png" alt="">
+    </div>
+
+    <div class="card">
+      <img src="styles/card-flip-card-image.png" alt="">
+    </div>
+
+    <div class="card">
+      <img src="styles/card-flip-card-image.png" alt="">
+    </div>
+
+    <div class="card">
+      <img src="styles/card-flip-card-image.png" alt="">
+    </div>
+
+    <div class="card">
+      <img src="styles/card-flip-card-image.png" alt="">
+    </div> -->
+
+  </section>
+
+
+  <!-- DOM Manipulation/ Button Section -->
+   <div id="bottom-content">
+  <h2 id="results">1</h2>
+  <button id="reset-btn">Start Over!</button>
+  </div>
+
   <script src="bundle.js"></script>
 </body>
 </html>
